# sqlfluff-templater-dataform

./: .gitignore  .sqlfluff  Dockerfile.dev  GEMINI.md  LICENSE.md  README.md  compose.yml  mise.toml  pyproject.toml  requirements.in  requirements.txt
.github/: dependabot.yml
.github/workflows/: pytest.yml  release.yml
docker/: Dockerfile.dev  docker-compose.yml  init  startup
monkey_test_definitions/: complex_udf_cte.sqlx  config_pre_post_ref.sqlx  customer_summary.sqlx  event_record.sqlx  generic_event.sqlx  location.sqlx  multiple_refs_when.sqlx  simple.sqlx  test.sqlx  work_item.sqlx
sqlfluff_templater_dataform/: __init__.py  constants.py  patterns.py  templater.py
test/: conftest.py  constants.py  helpers.py  linter_test.py  rules_test.py  templater_test.py  test_has_block.py  test_hook.py  test_process.py  test_regex_patterns.py  test_replace_blocks.py  test_replace_ref.py  test_replace_templates.py  test_slice.py  test_templatize.py
test/fixtures/dataform/: .sqlfluff
test/fixtures/dataform/definitions/: test.sqlx
test/fixtures/dataform/monkey_tests/: .sqlfluff  complex_udf_cte.sqlx  js_variables.sqlx  multiple_refs_when.sqlx
test/test_inputs/: config_pre_post_ref.sqlx  config_pre_post_ref__expected.sqlx  config_pre_post_ref__raw.sqlx  query_1__expected.sqlx  query_1__raw.sqlx  templatize_1.sqlx  templatize_10.sqlx  templatize_11.sqlx  templatize_12.sqlx  templatize_2.sqlx  templatize_5.sqlx  templatize_6.sqlx  templatize_7.sqlx  templatize_8.sqlx  templatize_9.sqlx  templatize_slice_1.sqlx  templatize_slice_2.sqlx  templatize_slice_3.sqlx  templatize_slice_4.sqlx  templatize_slice_5.sqlx  templatize_slice_7.sqlx  templatize_slice_8.sqlx  templatize_slice_9.sqlx
