[project]
name = "sqlfluff-templater-dataform"
version = "0.1.2"
description = "Lint your dataform project SQL"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "hiracky16"},
]
license = {file = "LICENSE.md"}
keywords = [
    "sqlfluff",
    "sql",
    "linter",
    "formatter",
    "bigquery",
    "dataform",
]
dependencies = [
    "sqlfluff==3.2.3"
]

[project.entry-points.sqlfluff]
sqlfluff_templater_dataform = "sqlfluff_templater_dataform"

[tool.setuptools.packages.find]
include = ["sqlfluff_templater_dataform"]

[project.urls]
Repository = "https://github.com/hiracky16/sqlfluff-templater-dataform.git"
